Dedupe raw or flasher images files during artifact prepare
Currently generic device types are uploading 3 images in the
test artifacts

balena.img.enc
balena-flasher.img.enc
balena-raw.img.enc

But balena.img is always going to match either the flasher or
the raw image depending on the device spec.

This change will replace balena.img(.enc) with a symlink when
possible in only the test artifacts to reduce the upload and download
size.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1529,6 +1529,13 @@ jobs:
             unzip "${zip}" -d "$(dirname "${zip}")"
           done
 
+          # If balena.img is a symlink, replace it with the file it points to.
+          if [ -L "${DEPLOY_PATH}/image/balena.img" ]; then
+            target_file=$(readlink --canonicalize "${DEPLOY_PATH}/image/balena.img")
+            rm "${DEPLOY_PATH}/image/balena.img"
+            cp "${target_file}" "${DEPLOY_PATH}/image/balena.img"
+          fi
+
       # https://github.com/unfor19/install-aws-cli-action
       # https://github.com/aws/aws-cli/tags
       - name: Setup awscli
@@ -2130,7 +2137,16 @@ jobs:
 
           find "${DEPLOY_PATH}/image" -type f -name "*.img.zip"
 
-          unzip "${DEPLOY_PATH}/image/${BALENA_OS_IMAGE}.zip" -d "${DEPLOY_PATH}/image/"
+          for zip in "${DEPLOY_PATH}"/image/*.img.zip; do
+            unzip "${zip}" -d "$(dirname "${zip}")"
+          done
+
+          # If balena.img is a symlink, replace it with the file it points to.
+          if [ -L "${DEPLOY_PATH}/image/balena.img" ]; then
+            target_file=$(readlink --canonicalize "${DEPLOY_PATH}/image/balena.img")
+            rm "${DEPLOY_PATH}/image/balena.img"
+            cp "${target_file}" "${DEPLOY_PATH}/image/balena.img"
+          fi
 
       # Check out private contracts if this is a private device type - as these are required for the tests
       - name: Checkout private Contracts
